--- a/css/gestograma.css
+++ b/css/gestograma.css
@@ -9,6 +9,32 @@
     border: 1px solid #000000;
   }
 */
+
+@media only screen and (max-width: 767px) {
+  .main-content #content #wheelContainer, 
+  .main-content #content #wheel-center, 
+  .main-content #content #wheelContainer #wheel #wheel-image{
+    width: 68%;
+    height: 68%;
+  }
+  .main-content #content #wheelContainer #wheel #hoy-image{
+    width: 98%;
+    height: 98%;
+    top: 20px;
+    left: 10px;
+  }
+  .main-content #content  #wheelContainer #wheel-center{
+    background-size: 300px 300px;
+    top: 50px;
+    left: 85px;
+  }
+  .main-content #content #wheelContainer #wheel{
+    padding: 0;
+  }
+}
+
+
+
 #main {
 	/*background: url("bg-main.png") repeat-y scroll right top #F6F6F6;*/
   margin: 0 auto;
@@ -17,7 +43,7 @@
 }
 
 #wheelContainer {
-	background: url("../images/meses2.svg") no-repeat scroll left top transparent;
+	background: url("../images/meses.svg") no-repeat scroll left top transparent;
   height: 640px;
   margin-left: 10px;
   padding: 7px;
@@ -42,18 +68,24 @@
 }
 
 #wheelContainer #wheel #hoy-image {
-	position:absolute;
-	z-index:10;
+	position: absolute;
+  z-index: 10;
+  height: 630px;
+  width: 650px;
+  top: 120px;
+  left: 0;
 }
 
 
 #wheelContainer #wheel-center {
-	background: url("../images/wheel-center.png") no-repeat scroll left top transparent;
+	background: url("../images/logo-sermama.svg") no-repeat scroll left top transparent;
+  background-size: 400px 400px;
+  background-position: 110% 30%;
   height: 214px;
   left: 202px;
   position: absolute;
   top: 202px;
-  width: 214px;
+  width: 314px;
 }
 	
 #wheelContainer #wheel-center #center-lastMenstrual {
